# expertise_app_python

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/: server.py
src/core/: main.py
src/core/database/: session.py
src/core/decorators/: service_error_handler.py
src/core/dependencies/: configure_container.py  services.py
src/core/interface/: server.py
src/core/middleware/: auth_middleware.py  middleware_service.py  permissions.py  verification_middleware.py
src/core/models/: http_responses.py
src/core/repository/: base_repository.py
src/core/services/: data_handling_service.py  email_service.py  hashing_service.py  http_service.py  redis_service.py  request_validation_service.py  webtoken_service.py
src/modules/agents/: agents_controller.py  agents_dependencies.py  agents_models.py  agents_routes.py  agents_service.py
src/modules/chats/: chats_controller.py  chats_dependencies.py  chats_models.py  chats_routes.py  (+1 more)
tests/e2e/: test_agents_routes.py  test_chats_routes.py  test_companies_routes.py  test_employee_routes.py  test_invites_routes.py  test_messages_routes.py  test_users_routes.py
tests/integration/: test_document_manager.py  test_document_manger.py  test_email_service.py  test_employee_repository.py  test_s3_service.py
tests/unit/: test_agent_access_service.py  test_agents_service.py  test_chats_service.py  test_companies_service.py  test_documents_service.py  test_employee_agents_service.py  test_employees_service.py  test_invites_service.py  test_messages_service.py  test_users_service.py
(+161 files in other folders)
