[project]
name = "app-expertise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "boto3>=1.40.15",
    "cryptography>=45.0.6",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "qdrant-client>=1.15.1",
    "redis>=4.2.0",
    "sqlalchemy>=2.0.43",
    "types-boto3[essential]>=1.40.15",
]
